Switch to Apache client, which lets us control things.